Use Locale.ROOT for formatting strings with %d